index.css
#yellow-button {
    margin-bottom: 40px;
}

h3 {
    margin-bottom: 20px;
}


/* i {
    border-radius: 5px;
    border: 3px solid #003366;
    color:#003366;
    height: 250px;
    width: 175px;
    justify-content: center;
    align-items: center;
    margin-left: 50px;
    margin-right: 50px;
} */

/* #icons {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
    margin-bottom: 20px;
}

.icon-container {  
    align-items: vertical; 
    justify-content: center;
    align-items: center;
    border: 2px solid black; 
    border-radius: 5%;  
    padding: 10px; 
    height: 200px;
    width: 170px;
    margin-left: 40px;
    margin-right: 40px;
  }

  #house-icon {
    font-size: 120px;
  }
  
  .icon-container i {
    margin-right: 5px;
    font-size: 100px; 
    color: black;
  }
  
  .icon-container span {
    font-size: 24px;
    text-decoration: none;
    color: black;
  } */

#house-icon {
    font-size: 75px !important;
    padding: 5px;
    margin-bottom: -15px;
}

 #icons a {
    text-decoration: none;
}


 #icons {
    display: flex;
    justify-content: space-around; 
    align-items: center;
    flex-wrap: wrap;
    gap: 20px;
    margin-bottom: 40px;
    color:#003366;
  }
  
  .icon-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 150px; 
    height: 150px;
    border: 2px solid #003366;
    border-radius: 10px;
    padding: 10px;
    text-align: center;
    color: #003366;
    cursor: pointer; 
    transition: all 0.3s ease;
  }

  .icon-container:hover {
    background-color: #003366;
    color: white;
  }
  
  i {
    font-size: 60px; 
  }
  
  span {
    margin-top: 8px;
    font-size: 16px;
  }
  
  @media (max-width: 650px) {
    #icons {
      flex-direction: column;
      align-items: center;
    }
  }
  
#services {
    color:#003366;
}

#lightning {
    font-size: 50px;
    color:#FFD700;
}

#LED {
    display: flex;
    background-color: #003366;
    width: 100%;
    height: auto;
    min-height: 550px;
    color: white;
    justify-content: center;
    align-items: center;

}

#led-pic {
    width: 45%;
    height: 75%;
    margin: 20px;
}

#led-text {
    display: flex;
    text-align: center;
    flex-direction: column;
    width: 45%;
    height: 75%;
    margin: 20px;
}

#led-text h5 {
    font-size: 40px;
}

#led-text ul {
    text-align: left;
    font-size: 20px;
}


@media screen and (max-width: 825px) {
    #LED {
        flex-direction: column;
    }
    #led-pic {
        width: 75%;
        height: 45%;
        margin: 20px;
    }
    #led-text {
        width: 75%;
        height: 45%;
        margin: 20px;
    }
}

